tests/golden/openshift/openshift/openshift/01_keycloak_helmchart/keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    route.openshift.io/termination: reencrypt
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 16.1.1
    helm.sh/chart: keycloak-17.0.3
  name: keycloak
spec:
  rules:
    - host: keycloak.example.com
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.example.com
      secretName: ingress-tls
