tests/golden/openshift/openshift/openshift/01_keycloak_helmchart/keycloak/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: keycloak-tls
  labels:
    app.kubernetes.io/component: http
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 15.0.2
    helm.sh/chart: keycloak-10.3.1
  name: keycloak-http
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
    - name: http-management
      port: 9990
      protocol: TCP
      targetPort: http-management
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
  type: ClusterIP
